--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "svelte-reactive-css-preprocess",
+  "name": "svelte-reactive-css-preprocess-with-object-array-support",
   "version": "0.0.2",
   "description": "Svelte preprocessor to automatically create and update css variables using svelte's reactivity",
-  "main": "src/index.js",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc src/index.ts --outDir build --lib 'esnext' --declaration"
   },
   "keywords": [
     "svelte",
@@ -12,16 +13,20 @@
     "css",
     "styles"
   ],
-  "author": "Sean Mullen <sean@srmullen.com>",
+  "author": "Subham Bhattacharjee <subhambhsubhambh@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "svelte": "^3.44.0"
+    "@types/estree": "^1.0.0",
+    "estree-walker": "^3.0.1",
+    "magic-string": "^0.26.7",
+    "svelte": "^3.44.0",
+    "typescript": "^4.9.3"
   },
   "files": [
     "src"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/srmullen/svelte-reactive-css-preprocess.git"
+    "url": "https://github.com/SBHattarj/svelte-reactive-css-preprocess/tree/main/dev"
   }
 }
