--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-reactive-css-preprocess-with-object-array-support",
-  "version": "0.0.2",
+  "version": "0.0.2a",
   "description": "Svelte preprocessor to automatically create and update css variables using svelte's reactivity",
   "main": "build/index.js",
   "types": "build/index.d.ts",
